Remove previously applied style to fix white space in mobile UI

--- a/main.css
+++ b/main.css
@@ -93,7 +93,6 @@ nav, ul {
     grid-template-areas: "content figure";
     width: 100%;
     margin: auto;
-    height: 100vh;
 }
 
 .content {
